--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   },
   "scripts": {
     "dev": "npx tailwindcss -i src/input.css -o ./dist/output.css --watch"
+  },
+  "dependencies": {
+    "flowbite": "^1.6.5"
   }
 }
